Update URLs: legacy.soybase.org/data/v2 -> data.soybase.org and legacy.soybase.org/data/annex -> data.soybase.org/annex

--- a/_data/projects/SoyNAM_2014/project_details.yml
+++ b/_data/projects/SoyNAM_2014/project_details.yml
@@ -78,25 +78,25 @@
             - description: "SNP haplotypes for all SoyNAM parents using Wm82.a1 coordinates"
               url: "https://legacy.soybase.org/SoyNAM/data/genotypes/Wm82.a1/SoyNAM%20parents%204312%20SNP%20genotypes%20Wm82.a1.zip"
             - description: "SNP alleles for all SoyNAM parents using Wm82.a1 coordinates"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/diversity/Wm82.gnm1.div.Song_Yan_2017/glyma.Wm82.gnm1.div.Song_Yan_2017.SNPs.parents.vcf.gz"
+              url: "https://data.soybase.org/Glycine/max/diversity/Wm82.gnm1.div.Song_Yan_2017/glyma.Wm82.gnm1.div.Song_Yan_2017.SNPs.parents.vcf.gz"
             - description: "SNP haplotypes for all SoyNAM parents using Wm82.a2 coordinates"
               url: "https://legacy.soybase.org/SoyNAM/data/genotypes/Wm82.a2/SoyNAM%20parents%204312%20SNP%20genotypes%20Wm82.a2.zip"
             - description: "SNP alleles for all SoyNAM parents using Wm82.a2 coordinates"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/diversity/Wm82.gnm2.div.Song_Yan_2017/glyma.Wm82.gnm2.div.Song_Yan_2017.SNPdata.parents.vcf.gz"
+              url: "https://data.soybase.org/Glycine/max/diversity/Wm82.gnm2.div.Song_Yan_2017/glyma.Wm82.gnm2.div.Song_Yan_2017.SNPdata.parents.vcf.gz"
             - description: "SNP haplotypes for the parents and progeny for all SoyNAM families using Wm82.a1 coordinates"
               url: "https://legacy.soybase.org/SoyNAM/data/genotypes/Wm82.a1/SoyNAM%20parents+progeny%204312%20SNP%20genotypes%20Wm82.a1.zip"
             - description: "SNP alleles for the parents and progeny for all SoyNAM families using Wm82.a1 coordinates"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/diversity/Wm82.gnm1.div.Song_Yan_2017/glyma.Wm82.gnm1.div.Song_Yan_2017.SNPs.parents-progeny.vcf.gz"
+              url: "https://data.soybase.org/Glycine/max/diversity/Wm82.gnm1.div.Song_Yan_2017/glyma.Wm82.gnm1.div.Song_Yan_2017.SNPs.parents-progeny.vcf.gz"
             - description: "SNP haplotypes for the parents and progeny for all SoyNAM families using Wm82.a2 coordinates"
               url: "https://legacy.soybase.org/SoyNAM/data/genotypes/Wm82.a2/SoyNAM%20parents+progeny%204312%20SNP%20genotypes%20Wm82.a2.zip"
             - description: "SNP alleles for the parents and progeny for all SoyNAM families using Wm82.a2 coordinates"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/diversity/Wm82.gnm2.div.Song_Yan_2017/glyma.Wm82.gnm2.div.Song_Yan_2017.SNPdata.parents-progeny.vcf.gz"
+              url: "https://data.soybase.org/Glycine/max/diversity/Wm82.gnm2.div.Song_Yan_2017/glyma.Wm82.gnm2.div.Song_Yan_2017.SNPdata.parents-progeny.vcf.gz"
             - description: "Supplemental Table S1: 103 Marker Trait Associations that were signficant for yield, maturity, height, lodging, or seed mass in the soybean NAM population."
               url: "https://legacy.soybase.org/SoyNAM/data/Diers%20et%20al._G3_2018_Table_S1.xlsx"
             - description: "Soy50K imputed haplotypes for the parents and progeny for all SoyNAM families, genotyped using the SoySNP50K and SoyNAM6K assays"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/diversity/Wm82.gnm2.div.Song_NAM_2021a"
+              url: "https://data.soybase.org/Glycine/max/diversity/Wm82.gnm2.div.Song_NAM_2021a"
             - description: "Soy50K imputed haplotypes for the parents and progeny for all SoyNAM families, genotyped with WGS and the SoySNP50K and SoyNAM6K assays"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/diversity/Wm82.gnm2.div.Song_NAM_2021b"
+              url: "https://data.soybase.org/Glycine/max/diversity/Wm82.gnm2.div.Song_NAM_2021b"
     - category:
         - name: request seed
           instances:
