--- a/_data/projects/Bayer_Valliyodan_2021/project_details.yml
+++ b/_data/projects/Bayer_Valliyodan_2021/project_details.yml
@@ -15,17 +15,17 @@
         - name: data
           instances:
             - description: "Variant counts of Accessions"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.div.96SR.gene_variant_counts.txt.gz"
+              url: "https://data.soybase.org/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.div.96SR.gene_variant_counts.txt.gz"
             - description: "GFF3 file of genes not in Lee"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.div.96SR.genes_not_in_Lee.gff3.gz"
+              url: "https://data.soybase.org/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.div.96SR.genes_not_in_Lee.gff3.gz"
             - description: "Protein sequences of Lee gene transcripts and protein sequences unique to each accession"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.div.96SR.protein_Lee_and_other.fna.gz"
+              url: "https://data.soybase.org/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.div.96SR.protein_Lee_and_other.fna.gz"
             - description: "VCF file of SNPs >= 5 MAF"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.div.96SR.SNPs_maf05.vcf.gz"
+              url: "https://data.soybase.org/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.div.96SR.SNPs_maf05.vcf.gz"
             - description: "Matrix of genes present/absence in Lee"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.pan.96SR.gene_pav_matrix.txt.gz"
+              url: "https://data.soybase.org/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.pan.96SR.gene_pav_matrix.txt.gz"
             - description: "Fasta file of sequences not present in Lee"
-              url: "https://legacy.soybase.org/data/v2/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.pan.96SR.seq_not_in_Lee.fna.gz"
+              url: "https://data.soybase.org/Glycine/max/pangenomes/Lee.gnm1.pan.96SR/glyma.Lee.gnm1.pan.96SR.seq_not_in_Lee.fna.gz"
     - category:
         - name: genome browser
           instances:
