--- a/_data/map_cmap.yml
+++ b/_data/map_cmap.yml
@@ -1,6 +1,10 @@
 ---
 cmap-sets:
   -
+    URL: "maps/cmap-classic"
+    description: "Classic QTL features"
+    linkage_groups: ['D1a', 'D1b', 'N', 'C1', 'A1', 'C2', 'M', 'A2', 'K', 'O', 'B1', 'H', 'F', 'B2', 'E', 'J', 'D2', 'G', 'L', 'I']
+  -
     URL: "maps/cmap-all"
     description: "All QTL features"
     linkage_groups: ['D1a', 'D1b', 'N', 'C1', 'A1', 'C2', 'M', 'A2', 'K', 'O', 'B1', 'H', 'F', 'B2', 'E', 'J', 'D2', 'G', 'L', 'I']
