--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -90,12 +90,12 @@
   name: "Northern Uniform Soybean Trials (NUST)"
   url: "/tools/nust/"
 - category: "Legacy tools"
-  description: "Legacy.SoyBase tool: Search for the GRIN descriptor data" 
+  description: "Legacy SoyBase tool: Search for the GRIN descriptor data" 
   name: "GRIN Data Explorer"
   url: "https://legacy.soybase.org/grindata/"
   target: "_blank"
 - category: "Legacy tools"
-  description: "Legacy.SoyBase tool: Gene expression resources for soybean"
+  description: "Legacy SoyBase tool: Gene expression resources for soybean"
   name: "Gene Expression Explorer"
   url: "https://legacy.soybase.org/experiments/"
   target: "_blank" 
