--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,7 @@ liquid:
 strict_front_matter: true
 
 # the GraphQL Server URI; LIS by default
-# graphql_uri: https://graphql.soybase.ncgr.org/
-graphql_uri: https://graphql.lis.ncgr.org/
+graphql_uri: https://graphql.soybase.ncgr.org/
 
 # Build settings
 theme: jekyll-theme-legumeinfo
