--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -95,6 +95,10 @@
   url: "https://legacy.soybase.org/grindata/"
   target: "_blank"
 - category: "Legacy tools"
+  description: "Legacy SoyBase tool: Search for the GRIN descriptor data (New)"
+  name: "GRIN Data Explorer - (WIP)"
+  url: "tools/grin/"
+- category: "Legacy tools"
   description: "Legacy SoyBase tool: Gene expression resources for soybean"
   name: "Gene Expression Explorer"
   url: "https://legacy.soybase.org/experiments/"
