--- a/_data/team.yml
+++ b/_data/team.yml
@@ -33,7 +33,7 @@
 - name: Simon Novak
   role: Student Programmer
   status: student
-- name: Reagan Nelson
+- name: Raegan Nelson
   role: Student Curator
   status: student
   # past employee
