Remove legacy grin tool and change category of new one.

--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -98,12 +98,7 @@
   description: "Phenotypic reports for the Northern Uniform Soybean Trials (NUST) from 1989 to present"
   name: "Northern Uniform Soybean Trials (NUST)"
   url: "/tools/nust/"
-- category: "Legacy tools"
-  description: "Legacy SoyBase tool: Search for the GRIN descriptor data"
-  name: "GRIN Data Explorer"
-  url: "https://legacy.soybase.org/grindata/"
-  target: "_blank"
-- category: "Legacy tools"
+- category: "Analysis"
   description: "Legacy SoyBase tool: Search for the GRIN descriptor data (New)"
   name: "GRIN Data Explorer - (WIP)"
   url: "/tools/grin/"
