added a team member

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,6 +1,6 @@
 ---
 - name: Jacqueline Campbell
-  role: SoyBase Co-curator
+  role: SoyBase Curator
   specialization: Data curation, Site development
   website: https://orcid.org/0000-0003-2787-3955
   status: current
@@ -17,7 +17,12 @@
 - name: Rex Nelson
   role: Lead SoyBase Curator
   specialization: Data Curation, Site Development
-  website: https://www.ars.usda.gov/midwest-area/ames/cicgru/people/rex-nelson/
+  website: https://www.ars.usda.gov/midwest-area/ames/cicgru/people/rex-nelson/  
+  status: current
+- name: Scott Kalberer
+  role: Biological Science Technician 
+  specialization: Curator
+  website: 
   status: current
   # current student employee
 - name: Simon Novak
