--- a/_data/team.yml
+++ b/_data/team.yml
@@ -20,9 +20,9 @@
   website: https://www.ars.usda.gov/midwest-area/ames/cicgru/people/rex-nelson/  
   status: current
 - name: Scott Kalberer
-  role: Biological Science Technician 
+  role: Biological Science Technician
   specialization: Curator
-  website: 
+  website: https://www.legumeinfo.org/
   status: current
   # current student employee
 - name: Simon Novak
