--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -99,8 +99,8 @@
   name: "Northern Uniform Soybean Trials (NUST)"
   url: "/tools/nust/"
 - category: "Analysis"
-  description: "Legacy SoyBase tool: Search for the GRIN descriptor data (New)"
-  name: "GRIN Data Explorer - (WIP)"
+  description: "Search for the GRIN descriptor data"
+  name: "GRIN Data Explorer"
   url: "/tools/grin/"
 - category: "Legacy tools"
   description: "Legacy SoyBase tool: Gene expression resources for soybean"
