--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -92,17 +92,16 @@
   description: "Search for Allele"
   name: "Allele Search Tool"
   url: "/tools/alleles/index.html"
-
+ 
   target: "_blank"
 - category: "Analysis"
   description: "Phenotypic reports for the Northern Uniform Soybean Trials (NUST) from 1989 to present"
   name: "Northern Uniform Soybean Trials (NUST)"
   url: "/tools/nust/"
-- category: "Legacy tools"
-  description: "Legacy SoyBase tool: Search for the GRIN descriptor data"
+- category: "Analysis"
+  description: "Search for the GRIN descriptor data"
   name: "GRIN Data Explorer"
-  url: "https://legacy.soybase.org/grindata/"
-  target: "_blank"
+  url: "/tools/grin/"
 - category: "Legacy tools"
   description: "Legacy SoyBase tool: Gene expression resources for soybean"
   name: "Gene Expression Explorer"
