--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@
 title: "SoyBase"
 subtitle: Integrating Genetics and Genomics to Advance Soybean Research
 logo: /assets/img/sb_logo.png
-email: https://www.soybase.org/include/antispam.php?menu=1
+email: https://www.soybase.org/about/#contact
 description: >- # this means to ignore newlines until "baseurl:"
   A collaborative, community resource to facilitate crop improvement by integrating
   genetic, genomic, and trait data across legume species.
