--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: soybasedatabase
 github_username: soybase
-newsletter: /community/newsletter.html
+newsletter: https://www.soybase.org/community/newsletter.html
 author: SoyBase curator
 lang: en
 
