--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@
 title: "SoyBase"
 subtitle: Integrating Genetics and Genomics to Advance Soybean Research
 logo: /assets/img/sb_logo.png
-email: https://www.soybase.org/about/#contact
+email: /about/#contact
 description: >- # this means to ignore newlines until "baseurl:"
   A collaborative, community resource to facilitate crop improvement by integrating
   genetic, genomic, and trait data across legume species.
@@ -33,7 +33,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: soybasedatabase
 github_username: soybase
-newsletter: https://www.soybase.org/community/newsletter.html
+newsletter: /community/newsletter.html
 author: SoyBase curator
 lang: en
 
