--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -1,65 +1,48 @@
 ---
+- category: "Analysis"
+  description: "GO term enrichment analysis tool"
+  name: "GO Enrichment Analysis"
+  url: "/tools/analysis/go.html"
+- category: "Analysis"
+  description: "Search for the GRIN descriptor data"
+  name: "GRIN Data Explorer"
+  url: "/tools/grin/"
+- category: "Analysis"
+  description: "Phenotypic reports for the Northern Uniform Soybean Trials (NUST) from 1989 to present"
+  name: "Northern Uniform Soybean Trials (NUST)"
+  url: "/tools/nust/"
 - category: "Download / Query"
   description: "Browser interface to all of the files in SoyBase."
   name: "Datastore"
   url: "https://data.soybase.org/Glycine/"
+- category: "Download / Query"
+  description: "Overviews of data characteristics at SoyBase: genome assembly sizes, gene counts, BUSCO coverage, etc."
+  name: "Data Overviews for soy genomic data"
+  url: "https://dscensor.legumeinfo.org/multiqc-demo/genome_main:Glycine"
+  target: "_blank"
 - category: "Download / Query"
   description: "GlycineMine: an InterMine interface for most of the data at SoyBase, including genetic data. Tools include a powerful query engine."
   name: "GlycineMine"
   url: "https://mines.legumeinfo.org/glycinemine/begin.do"
   target: "_blank"
 - category: "Download / Query"
-  description: "Overviews of data characteristics at SoyBase and LIS: genome assembly sizes, gene counts, BUSCO coverage, etc."
-  name: "Data Overviews for soy genomic data"
-  url: "https://dscensor.legumeinfo.org/multiqc-demo/genome_main:Glycine"
-  target: "_blank"
-- category: "Download / Query"
   description: "USDA Germplasm collection SoySNP50K Haplotypes: downloads, viewing on browsers, etc."
   name: "USDA Germplasm SoySNP50K"
-  url: "/tools/snp50k"
-- category: "Visualize / Browse"
-  description: "Genome browsers for soybean and related species. (Also accessible from the GENOMICS tab)"
-  name: "Genome browsers"
-  url: "/tools/browsers"
-- category: "Visualize / Browse"
-  description: "Browser for dynamically discovering and viewing genomic synteny across selected species."
-  name: "Genome Context Viewer for Glycine"
-  url: "https://gcv.soybase.org/instructions"
-- category: "Visualize / Browse"
-  description: "Interactive visualization of multiple GWAS and QTL data sets, using synteny to identify potentially conserved association regions between species."
-  name: "ZZBrowse GWAS/QTL"
-  url: "https://zzbrowse.legumeinfo.org/"
+  url: "/tools/snp50k" 
+- category: "Legacy tools"
+  description: "Legacy SoyBase tool: Gene expression resources for soybean"
+  name: "Gene Expression Explorer"
+  url: "https://legacy.soybase.org/experiments/"
   target: "_blank"
-- category: "Visualize / Browse"
-  description: "View genetic and comparative maps."
-  name: "CMap-js: Genetic Map Viewer"
-  url: "/maps"
-- category: "Visualize / Browse"
-  description: "View GIS location information for soybean accessions."
-  name: "LIS Germplasm GIS Viewer"
-  url: "https://germplasm-map.legumeinfo.org/#?zoom=3&maxRecs=200&taxonQuery=Glycine%20max&traitScale=global&geocodedOnly=false&traitExcludeUnchar=false&limitToMapExtent=false&lat=39.22&lng=46.00&mapHeight=292.5&baseMap=ESRI%20-%20NatGeo%20(default,%20reference%20map)&ne_lat=56.306339593088424&ne_lng=169.92700695991516&sw_lat=16.702777644747673&sw_lng=-77.92455554008485&accessionIdsInclusive=false"
-  target: "_blank"
-- category: "Visualize / Browse"
-  description: "Gene expression resources for soybean."
-  name: "Expression Resources"
-  url: "/tools/expression/"
-- category: "Sequence search"
-  description: "Run BLASTs against LIS genomes, CDSes, and proteins"
-  name: "SoyBase SequenceServer BLAST"
-  url: "/tools/sequenceserver/"
-- category: "Sequence search"
-  description: "Functionally annotate protein or nucleotide sequences and place them into gene trees"
-  name: "Annotate Your Sequences"
-  url: "https://funnotate.legumeinfo.org/"
-  target: "_blank"
+- category: "Search"
+  description: "Search for Allele"
+  name: "Allele Search Tool"
+  url: "/tools/alleles/index.html"
+  target: "_blank"  
 - category: "Search"
   description: "Find corresponding gene IDs between accessions"
   name: "Gene-name translator"
   url: "/tools/translate/"
-- category: "Visualize / Browse"
-  description: "A multiple chromosome visualisation tool for visualizing resequencing or SNP array data"
-  name: "GCViT: SNP Comparison Tool"
-  url: "/tools/gcvit/"
 - category: "Search"
   description: "Search for genes"
   name: "Gene Search Tool"
@@ -68,6 +51,49 @@
   description: "Search for trait associations"
   name: "Trait Search Tool"
   url: "/tools/search/trait.html"
+- category: "Sequence search"
+  description: "Functionally annotate protein or nucleotide sequences and place them into gene trees"
+  name: "Annotate Your Sequences"
+  url: "https://funnotate.legumeinfo.org/"
+  target: "_blank"
+- category: "Sequence search"
+  description: "Run BLASTs against LIS genomes, CDSes, and proteins"
+  name: "SequenceServer BLAST"
+  url: "/tools/sequenceserver/"
+- category: "Visualize / Browse"
+  description: "View genetic and comparative maps."
+  name: "CMap-js: Genetic Map Viewer"
+  url: "/maps"
+- category: "Visualize / Browse"
+  description: "Visualization and analysis of diversity of genetic variants."
+  name: "DivBrowse"
+  url: "https://divbrowse.soybase.org/"
+  target: "_blank"
+- category: "Visualize / Browse"
+  description: "Gene expression resources for soybean."
+  name: "Expression Resources"
+  url: "/tools/expression/"
+- category: "Visualize / Browse"
+  description: "A multiple chromosome visualisation tool for visualizing resequencing or SNP array data"
+  name: "GCViT: SNP Comparison Tool"
+  url: "/tools/gcvit/"
+- category: "Visualize / Browse"
+  description: "Gene symbol viewer"
+  name: "Gene Symbol Viewer"
+  url: "/tools/gene-symbols/"
+- category: "Visualize / Browse"
+  description: "Genome browsers for soybean and related species. (Also accessible from the GENOMICS tab)"
+  name: "Genome Browsers"
+  url: "/tools/browsers"
+- category: "Visualize / Browse"
+  description: "Browser for dynamically discovering and viewing genomic synteny across selected species."
+  name: "Genome Context Viewer for Glycine"
+  url: "https://gcv.soybase.org/instructions"  
+- category: "Visualize / Browse"
+  description: "View GIS location information for soybean accessions."
+  name: "LIS Germplasm GIS Viewer"
+  url: "https://germplasm-map.legumeinfo.org/#?zoom=3&maxRecs=200&taxonQuery=Glycine%20max&traitScale=global&geocodedOnly=false&traitExcludeUnchar=false&limitToMapExtent=false&lat=39.22&lng=46.00&mapHeight=292.5&baseMap=ESRI%20-%20NatGeo%20(default,%20reference%20map)&ne_lat=56.306339593088424&ne_lng=169.92700695991516&sw_lat=16.702777644747673&sw_lng=-77.92455554008485&accessionIdsInclusive=false"
+  target: "_blank"
 - category: "Visualize / Browse"
   description: "SoyBase Soybean growth, development and structural ontology."
   name: "Ontology"
@@ -77,28 +103,7 @@
   name: "Parentage"
   url: "/tools/parentage"
 - category: "Visualize / Browse"
-  description: "Gene symbol viewer"
-  name: "Gene Symbol Viewer"
-  url: "/tools/gene-symbols/"
-- category: "Analysis"
-  description: "GO term enrichment analysis tool"
-  name: "GO Enrichment Analysis"
-  url: "/tools/analysis/go.html"
-- category: "Search"
-  description: "Search for Allele"
-  name: "Allele Search Tool"
-  url: "/tools/alleles/index.html"
-  target: "_blank"
-- category: "Analysis"
-  description: "Phenotypic reports for the Northern Uniform Soybean Trials (NUST) from 1989 to present"
-  name: "Northern Uniform Soybean Trials (NUST)"
-  url: "/tools/nust/"
-- category: "Analysis"
-  description: "Search for the GRIN descriptor data"
-  name: "GRIN Data Explorer"
-  url: "/tools/grin/"
-- category: "Legacy tools"
-  description: "Legacy SoyBase tool: Gene expression resources for soybean"
-  name: "Gene Expression Explorer"
-  url: "https://legacy.soybase.org/experiments/"
+  description: "Interactive visualization of multiple GWAS and QTL data sets, using synteny to identify potentially conserved association regions between species."
+  name: "ZZBrowse GWAS/QTL"
+  url: "https://zzbrowse.legumeinfo.org/"
   target: "_blank"
